# llm-benchmark

./: .env.example  .gitignore  README.md  blueprint.md  convert.py  pyproject.toml  upload_to_hf.py
config/: config_demo.yaml  config_eland_all_models.yaml  config_eland_goat.yaml  config_eland_new.yaml  config_gpu_burst.yaml  config_gpustack.yaml  config_gpustack_dual.yaml  config_mlx.yaml  config_mock.yaml  config_mock_stream.yaml  config_quick_real.yaml  config_simple_test.yaml  qual_example.yaml  qual_opview.yaml  qual_school.yaml  qual_threads.yaml
data/exam_bank/manifests/: elementary_exam_links.csv  elementary_exam_links.json
data/prompts/: gpustack_short.jsonl  long.jsonl  short.jsonl
docs/plans/: 2026-02-25-llm-qual-bench-design.md
llmbench/: __init__.py  cli.py
llmbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llmbench/adapters/: __init__.py  base.py  mock.py  openai.py
llmbench/config/: loader.py  schema.py
llmbench/loadgen/: executor.py
llmbench/orchestrator/: runner.py
llmbench/qual/: config.py  exam_bank_source.py  exam_question_parser.py  opview_mcp.py  pipeline.py  ptt_source.py  report.py  schemas.py  school_qa_source.py  taiwan_knowledge_source.py  taiwan_md_source.py  tds_direct.py  tds_profile.py  tds_store.py  threads_source.py  trending.py  world_knowledge_source.py
llmbench/qual/agents/: designer.py  executor.py  judge.py  qa_tester.py  researcher.py
llmbench/qual/prompts/: designer.py  judge.py  qa_tester.py
llmbench/qual/storage/: db.py  exporter.py
llmbench/report/: generator.py
llmbench/scenarios/: base.py
llmbench/storage/: json_store.py
llmbench/utils/: logging.py
llmbench/web/: __init__.py  app.py  config.py  crud.py  database.py  init_db.py  log_handler.py  migrate_add_history.py  migrate_add_logs.py  migrate_add_participant_scores.py  models.py  schemas.py  task_manager.py  tasks.py
llmbench/web/routes/: api.py  ui.py
llmbench/web/static/css/: styles.css
llmbench/web/static/js/: main.js
llmbench/web/templates/: base.html  benchmark_create.html  benchmark_detail.html  benchmark_edit.html  benchmarks_list.html  challenge_create.html  challenge_detail.html  challenge_edit.html  challenge_import_ptt_movie.html  challenge_import_school_exam.html  challenge_import_taiwan_knowledge.html  challenge_import_taiwan_md.html  challenge_import_threads.html  challenges_list.html  error.html  index.html
results/gpustack_dual_run/: concurrency_throughput.csv  global_summary.json  global_summary_copy.json  report.md
results/gpustack_dual_run/scenario-dual_short_chat/gpustack_chat_ext/: requests.jsonl  summary.json
results/gpustack_dual_run/scenario-dual_short_chat/gpustack_chat_int/: requests.jsonl  summary.json
results/gpustack_smoke_run/: concurrency_throughput.csv  global_summary.json  report.md
results/gpustack_smoke_run/scenario-short_chat/gpustack_chat/: requests.jsonl  (+1 more)
results/mock_aligned/: concurrency_throughput.csv  report.md  summary.json
results/mock_run_cli/: global_summary.json  report.md
results/mock_run_cli2/: global_summary.json  report.md
results/mock_run_cli3/: global_summary_copy.json  report.md
results/mock_run_cli4/: report.md  summary.json
scripts/: cleanup_recovered_challenge_names.py  collect_elementary_exam_links.py  recover_challenges_from_results.py  search_tds.py
specs/: 001_webservice.md  001_webservice_plan.md  PROGRESS.md
tests/: test_benchmark_mock.py  test_cli.py  test_concurrency_and_streaming.py  test_config.py  test_throughput_csv.py
tests/web/: test_api.py  test_database.py  test_integration.py
(+10 files in other folders)
