[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmbench"
version = "0.1.0"
description = "LLM Inference Server Benchmark Toolkit with Web UI"
authors = [
  {name = "LLMBench Contributors", email = "llmbench@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["LLM", "benchmark", "inference", "GPU", "latency", "fastapi", "web"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Framework :: FastAPI",
  "Environment :: Web Environment"
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "typer>=0.12.3",
  "orjson>=3.9.15",
  "numpy>=1.26.0",
  "tiktoken>=0.7.0",
  "transformers>=4.41.0",
  "rich>=13.7.0",
  "pyyaml>=6.0",
  "mlx-lm>=0.28.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "jinja2>=3.1.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.19.0",
  "python-multipart>=0.0.6",
  "greenlet>=3.0.0",
  # qual pipeline
  "openai>=1.30.0",
  "requests>=2.31.0",
  "mcp>=1.0.0",
  "langchain-mcp-adapters>=0.1.0",
  "python-dotenv>=1.0.0",
  "openpyxl>=3.1.5",
  "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "respx>=0.20.0"
]

[project.scripts]
llmbench = "llmbench.cli:app"

[project.urls]
Homepage = "https://github.com/eLAND-Research/llm-benchmark"
Documentation = "https://github.com/eLAND-Research/llm-benchmark/blob/main/README.md"
Repository = "https://github.com/eLAND-Research/llm-benchmark"
Issues = "https://github.com/eLAND-Research/llm-benchmark/issues"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

